force-app/main/default/objects/clariti__ArcGIS_Clariti_Layer_Configuration__mdt/clariti__ArcGIS_Clariti_Layer_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Define the objects to display on the ArcGIS component</description>
    <label>ArcGIS Clariti Layer Configuration</label>
    <pluralLabel>ArcGIS Clariti Layer Configurations</pluralLabel>
</CustomObject>