force-app/main/default/objects/clariti__ArcGIS_Clariti_Layer_Configuration__mdt/fields/clariti__Geolocation_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>clariti__Geolocation_Field_API_Name__c</fullName>
    <description>The API name of the field that contains the latitude and longitude values for the object.</description>
    <inlineHelpText>This field only supports the following field data type: Geolocation</inlineHelpText>
    <label>Geolocation Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>