force-app/main/default/objects/clariti__ArcGIS_Clariti_Layer_Configuration__mdt/fields/clariti__List_View_API_Names__c.field-meta.xml
<CustomField>
    <fullName>clariti__List_View_API_Names__c</fullName>
    <label>List View API Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>