force-app/main/default/objects/clariti__ArcGIS_Clariti_Layer_Configuration__mdt/fields/clariti__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>clariti__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>