force-app/main/default/objects/clariti__ArcGIS_Clariti_Layer_Configuration__mdt/fields/clariti__Object_Icon_Color__c.field-meta.xml
<CustomField>
    <fullName>clariti__Object_Icon_Color__c</fullName>
    <label>Object Icon Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#F32E20</fullName>
                <label>Red</label>
            </value>
            <value>
                <fullName>#C71205</fullName>
                <label>Dark Red</label>
            </value>
            <value>
                <fullName>#940036</fullName>
                <label>Maroon</label>
            </value>
            <value>
                <fullName>#C65D7C</fullName>
                <label>Mauve</label>
            </value>
            <value>
                <fullName>#C16A11</fullName>
                <label>Orange</label>
            </value>
            <value>
                <fullName>#AA6350</fullName>
                <label>Light Brown</label>
            </value>
            <value>
                <fullName>#795548</fullName>
                <label>Dark Brown</label>
            </value>
            <value>
                <fullName>#3E8E40</fullName>
                <label>Light Green</label>
            </value>
            <value>
                <fullName>#027409</fullName>
                <label>Dark Green</label>
            </value>
            <value>
                <fullName>#7D8604</fullName>
                <label>Light Olive</label>
            </value>
            <value>
                <fullName>#556B29</fullName>
                <label>Dark Olive</label>
            </value>
            <value>
                <fullName>#008F81</fullName>
                <label>Teal</label>
            </value>
            <value>
                <fullName>#0581E6</fullName>
                <label>Blue</label>
            </value>
            <value>
                <fullName>#0062B3</fullName>
                <label>Dark Blue</label>
            </value>
            <value>
                <fullName>#BD53D0</fullName>
                <label>Violet</label>
            </value>
            <value>
                <fullName>#914CE6</fullName>
                <label>Light Purple</label>
            </value>
            <value>
                <fullName>#651BC0</fullName>
                <label>Dark Purple</label>
            </value>
            <value>
                <fullName>#808080</fullName>
                <label>Light Grey</label>
            </value>
            <value>
                <fullName>#616161</fullName>
                <label>Dark Grey</label>
            </value>
            <value>
                <fullName>#1E1E1E</fullName>
                <default>true</default>
                <label>Black</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>